--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,6 +1,21 @@
+.head{
+    width: 100%;
+    height: auto;
+    
+}
 
+.head .nav-link{
+    color: brown;
+    font-size: 18px;
+}
+.head .nav-link:hover{
+    color: red;
+    
+}
 
-
+.head button{
+    background-color: red;
+}
 
 
 
@@ -237,10 +252,25 @@
     font-weight: lighter;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
+
+  .db button{
+      outline: none;
+      border: none;
+      color: white;
+      background-color: rgba(57, 231, 214, 0.562);
+      padding: 5px;
+      width: 10rem;
+      text-transform: uppercase;
+      border: 1px solid gray;
+  }
+  .db button:hover{
+    background-color: mediumturquoise;
+  }
 .feed{
     width: 100%;
     height: auto;
-    background-color: rgba(187, 184, 184, 0.288);
+    background-color: white;
     padding: 3rem;
 }
 .feed h3{
@@ -248,4 +278,95 @@
     font-weight: lighter;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-  
+  .feed button{
+    outline: none;
+    border: 1px solid gray;
+    text-transform: uppercase;
+    padding: 5px;
+    color: white;
+    background-color: rgba(57, 231, 214, 0.562);
+    margin-top: .7rem;
+    font-size: 18px;
+    width: 7rem;
+}  
+
+.feed button:hover{
+    background-color: mediumturquoise;
+}
+
+
+  .phpmy{
+    width: 100%;
+    height: auto;
+    background-color: rgba(187, 184, 184, 0.288);
+    padding: 3rem;
+}  
+
+.phpmy h3{
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+.phpmy button{
+    outline: none;
+    border: 1px solid gray;
+    text-transform: uppercase;
+    padding: 5px;
+    color: white;
+    background-color: rgba(57, 231, 214, 0.562);
+    margin-top: .7rem;
+    font-size: 18px;
+    width: 20rem;
+}  
+
+.phpmy button:hover{
+    background-color: mediumturquoise;
+}
+
+
+.blog{
+    width: 100%;
+    height: auto;
+    background-color: rgba(187, 184, 184, 0.288);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.blog .mai{
+    width: 100%;
+    height: auto;
+
+}
+
+.blog .mai p{
+    font-style: italic;
+    text-align: justify;
+}
+
+.blog .categ{
+    width: 100%;
+    height: auto;
+    background-color: white;
+}
+
+.mai h3{
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .mai button{
+    outline: none;
+    border: 1px solid gray;
+    text-transform: uppercase;
+    padding: 5px;
+    color: white;
+    background-color: rgba(57, 231, 214, 0.562);
+    margin-top: .4rem;
+    font-size: 18px;
+    width: 7rem;
+}  
+
+.mai button:hover{
+    background-color: mediumturquoise;
+}
