blog, blog-post,about,contact page added

--- a/assets/css/style_user.css
+++ b/assets/css/style_user.css
@@ -1,370 +1,619 @@
+
+
+/* header */
 .head{
     width: 100%;
     height: auto;
-    
-}
-
-.head .nav-link{
-    color: brown;
-    font-size: 18px;
-}
-.head .nav-link:hover{
-    color: red;
-    
-}
-
-.head button{
-    background-color: red;
-}
-
-
-
-
-
-.masthead {
-    height: auto;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-    
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: #1f4a60;
+    padding: 1rem;
+  }        
+  .head .nav-link{
     color: white;
-  }
-  
-  .welcome{
-      width: 100%;
-      height: auto;
-      text-align: center;
-      padding-top: 5rem;
-      padding-bottom: 5rem;
-  }
-  .welcome h1{
-      
-  }
-  .welcome .style1 {
-  
-  border-top: 2px solid rgba(230, 120, 57, 0.623);
-  margin-top: 0px;
-  width: 10rem;
-  
-  }   
-  .welcome p{
-      font-size: 1.2rem;
-      color: gray;
-  }  
-  .why{
-      width: 100%;
-      height: auto;
-      
-      padding-top: 3rem;
-      padding-bottom: 5rem;
-      background-color: rgba(199, 193, 193, 0.185);
-  }
-  .why h1{
-      text-align: center;
-  }
-  .why .style1 {
-  
-  border-top: 2px solid rgba(230, 120, 57, 0.623);
-  margin-top: 0px;
-  width: 10rem;
-  
-  }   
-  .why p{
-      font-size: 1.4rem;
-      color: rgba(245, 150, 96, 0.623);
-      
-  }
-  .our{
-      width: 100%;
-      height: auto;
-      
-      padding-top: 5rem;
-      padding-bottom: 5rem;
-  }
-  .our h1{
-      text-align: center;
-  }
-  .our .style1 {
-  
-  border-top: 2px solid rgba(230, 120, 57, 0.623);
-  margin-top: 0px;
-  width: 10rem;
-  
-  }  
-  .our p{
-      text-align: center;
-      font-size: 1.2rem;
-      color: gray;
-  }  
-  .our .card{
-      width: 400px;
-  }
-  .our .card img{
-      width: 40%;
-      margin-left: 5rem;
-      background-color: tomato;
-  }
-  .last {
-   
-   background-color: rgb( 44, 44, 44 );
-   
-   padding-top: 20px;
-  }
-  
-  .last p {
-   
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   color: rgb( 255, 255, 255 );
-   text-transform: uppercase;
-   line-height: 1.4;
-   text-align: center;
-   
-  }
-  .last .fa {
-   background-color: rgb( 44, 44, 44 );
-  color: white;
-  text-align: center;
-  
-  font-size: 15px;
-  border-style:solid;
-  border-color: rgba(230, 120, 57, 0.623);
-  border-width: 1px;
-  padding-top: 4px;
-  margin: 0px 4px 10px 0px;
-  border-radius: 6px;
-  width: 26px;
-  height: 26px;
-  
-  }
-  .last .fa:hover{
-      background-color: tomato;
-  }
-  .last a{
-     
-     margin-right: 8px;
-     
-  }
-  .last .reserved {
-   font-size: 10px;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   color: rgb( 226, 226, 226 );
-   line-height: 1.346;
-   text-align: center;
-  padding-bottom: 20px;
-  }
-  .last .lik{
-     float: none;
-     margin:none;
-     color: rgba(230, 120, 57, 0.623); 
-     text-transform: uppercase;
-     text-decoration: none;
-  
-  }
-  .last .lik:hover{
-     color: rgba(223, 144, 92, 0.336);
-  }
-
-
-
-
-
-  .log{
-    width: 100%;
-    height: auto;
     
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    background-color: rgba(199, 193, 193, 0.219);
   }
-  .log .card{
-      border: none;
-      padding: 20px 10px 30px 10px;
-  }
-  .log .card input[type=email], input[type=password] {
-      padding: 5px;
-      margin-bottom: 20px;
-      outline: none;
-      border: 1px solid grey;
-      border-radius: 5px;
-  }
-  .log .card button{
-      width: 40%;
-     outline: none;
-     border: 1px solid red;
-     color: white;
-     background-color: rgba(180, 111, 55, 0.479);
-     text-transform: uppercase;
-     padding: 4px;
-     margin-bottom: 10px;
-     border-radius: 5px;
-  }
-  .log .card button:hover{
-      background-color: coral;
-  }
-  .log .card a{
-      color: chocolate;
-      text-decoration: none;
-      width: 100%;
-  }
-  .log .card a:hover{
-      color: gainsboro;
+  .head .nav-item{
+    margin-left: 1rem;
   }
 
-
-
-  .ad{
-      width: 100%;
-      height: auto;
-      background-color: rgba(187, 184, 184, 0.288);
-      padding: 3rem;
-  }
-  .ad table{
-      background-color: white;
-     
-  }
-  .ad thead{
-      background-color: rgba(8, 8, 8, 0.801);
-      color: white;
-  }
-  .ad h3{
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-  .db{
-    width: 100%;
-    height: auto;
-    background-color: white;
-    padding: 3rem;
-  }
-
-.db thead{
-    background-color: rgba(8, 8, 8, 0.801);
-    color: white;
-}
-.db h3{
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-
-  .db button{
-      outline: none;
-      border: none;
-      color: white;
-      background-color: rgba(57, 231, 214, 0.562);
-      padding: 5px;
-      width: 10rem;
-      text-transform: uppercase;
-      border: 1px solid gray;
-  }
-  .db button:hover{
-    background-color: mediumturquoise;
-  }
-.feed{
-    width: 100%;
-    height: auto;
-    background-color: white;
-    padding: 3rem;
-}
-.feed h3{
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  .feed button{
+  .head .nav-item button{
+    border: 2px solid #f8981d;
     outline: none;
-    border: 1px solid gray;
-    text-transform: uppercase;
-    padding: 5px;
+    background-color: #f8981d;
+  
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
     color: white;
-    background-color: rgba(57, 231, 214, 0.562);
-    margin-top: .7rem;
-    font-size: 18px;
-    width: 7rem;
-}  
-
-.feed button:hover{
-    background-color: mediumturquoise;
-}
-
-
-  .phpmy{
-    width: 100%;
-    height: auto;
-    background-color: rgba(187, 184, 184, 0.288);
-    padding: 3rem;
-}  
-
-.phpmy h3{
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: 0.5s;
+  }
+  .head .nav-item button:hover{
+    border: 2px solid #f8981d;
+    
+    background-color: transparent;
+   
+    
+    color: white;
   }
 
-.phpmy button{
-    outline: none;
-    border: 1px solid gray;
-    text-transform: uppercase;
-    padding: 5px;
-    color: white;
-    background-color: rgba(57, 231, 214, 0.562);
-    margin-top: .7rem;
-    font-size: 18px;
-    width: 20rem;
-}  
-
-.phpmy button:hover{
-    background-color: mediumturquoise;
-}
+  /* header end */
 
 
-.blog{
+  /* index page */
+  .top-main{
     width: 100%;
     height: auto;
-    background-color: rgba(187, 184, 184, 0.288);
+    background-color: #1f4a60;
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
-
-.blog .mai{
-    width: 100%;
-    height: auto;
-
-}
-
-.blog .mai p{
-    font-style: italic;
-    text-align: justify;
-}
-
-.blog .categ{
-    width: 100%;
-    height: auto;
-    background-color: white;
-}
-
-.mai h3{
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  .mai button{
-    outline: none;
-    border: 1px solid gray;
-    text-transform: uppercase;
-    padding: 5px;
+.top-main h1{
+    text-align: center;
     color: white;
-    background-color: rgba(57, 231, 214, 0.562);
-    margin-top: .4rem;
-    font-size: 18px;
-    width: 7rem;
-}  
-
-.mai button:hover{
-    background-color: mediumturquoise;
 }
+.top-main img{
+    width: 30%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.top-main .card{
+    width: 100%;
+    height: auto;
+    border: none;
+}
+.top-main .card .button1{
+    width: 100%;
+    height: auto;
+    border: 2px solid #f8981d;
+    outline: none;
+    color: white;
+    background-color: #f8981d;
+    font-size: 1.2rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    transition: 0.5s;
+}
+.top-main .card .button1:hover{
+    background-color: #1f4a60;
+}
+.top-main .card .button2{
+    width: 100%;
+    height: auto;
+    border: 2px solid #f8981d;
+    outline: none;
+    color: white;
+    background-color: #1f4a60;
+    font-size: 1.2rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    transition: 0.5s;
+}
+.top-main .card .button2:hover{
+    background-color: #f8981d;
+}
+.how{
+    width: 100%;
+    height: auto;
+   
+}
+.how .how_left{
+    width: 100%;
+    height: auto;
+    background-color: #f1f2f2;
+}
+.how .how_left h3{
+    color: #333333;
+    font-weight: 400;
+    margin-top: 3rem;
+}
+.how .how_left p{
+    color: #333333;
+   font-size: 1.1rem;
+   text-align: justify;
+    
+}
+.how .how_left button{
+    border: 2px solid #1f4a60;
+    outline: none;
+    width: 8rem;
+    color: #1f4a60;
+    margin-bottom: 3rem;
+    margin-top: 1.5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    transition: 0.5s;
+}
+.how .how_left button:hover{
+    border: 2px solid #f8981d;
+    background-color: #f8981d;
+}
+.how .how_right{
+    width: 100%;
+    height: auto;
+    background-color: #1f4a60;
+    opacity: .99;
+}
+.how .how_right img{
+    width: 80%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    opacity: 1;
+}
+  /* index page end */
+
+
+  /* login module */
+  .login .vl {
+    border-left: 1px solid grey;
+    height: 2rem;  
+  }
+  .login{
+    width: 100%; 
+  }
+  .login h6{
+    text-align: center;
+    color: grey;
+    margin-left: -2px;
+  }
+  .login .card{
+    width: 100%;
+    height: auto;
+    border: none;
+  
+  }
+  .login .card button{
+    width: 100%;
+    height: auto;
+    outline: none;
+    border: none;
+    color: white;
+    font-weight: lighter;
+    border-radius: 3px;
+    padding-bottom: .5rem;
+    padding-top: .3rem;
+  }
+  .login .modal-header{
+    background-color: #1f4a60;
+  }
+  .login .modal-header button{
+    color: white;
+    outline: none;
+    border: none;
+  }
+  .login .modal-header h4{
+    color: white;
+    text-align: center;
+    font-weight: lighter;
+  }
+  .login input[type=email], input[type=password]{
+    width: 100%;
+    height: auto;
+    outline: none;
+    border: 1px solid grey;
+    margin-top: 1rem;
+    background-color: rgba(187, 182, 182, 0.123);
+    padding-left: 1rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    border-radius: 4px;
+    font-size: .8rem;
+  }
+  .login .modal-body .button1{
+    width: 100%;
+    height: auto;
+    text-align: center;
+    margin-top: 1rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    border-radius: 4px;
+    outline: none;
+    border: 2px solid #1f4a60;
+    color: white;
+    background-color: #1f4a60;
+    text-transform: uppercase;
+    font-size: .9rem;
+    transition: 0.5s;
+  }
+  .login .modal-body .button1:hover{
+    
+      background-color: transparent;
+      color: #1f4a60;
+  }
+  .login .modal-footer{
+    width: 100%;
+    background-color:  rgba(187, 182, 182, 0.486);
+  }
+  .login .modal-footer a{
+    text-decoration: none;
+    color: #333333;
+  }
+
+  /* login module end */
+
+
+  /* footer start */
+  .foot{
+    width: 100%;
+    height: auto;
+    background-color: #1f4a60;
+    color: white;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    
+  }
+  .foot h5{
+    padding-left: 3px ;
+    text-transform: uppercase;
+  }
+  .foot a{
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+  }
+  .foot a:hover{
+    color: #f8981d;
+    
+  }
+
+  .foot .style1 {
+
+border-top: 1px solid #f8981d;
+margin-top: 1px;
+width: 50%;
+margin-left: 0px;
+}
+.foot img{
+margin-top: 1rem;
+}
+.foot input[type=email]{
+margin-top: 1rem;
+width: 90%;
+padding-top: .5rem;
+padding-bottom: .5rem;
+padding-left: 1rem;
+}
+.foot button{
+width: 5rem;
+border: none;
+outline: none;
+background-color: #f8981d;
+color: white;
+margin-left: -90px;
+padding-bottom: .2rem;
+font-weight: lighter;
+}
+
+.last{
+    width: 100%;
+    height: auto;
+    background-color: #0D0E0E;
+    padding: .6rem;
+  }
+  .last a{
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+  }
+
+/* footer start end*/
+
+
+/* contact us page */
+.contact-head{
+    width: 100%;
+    height: 300px;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #1f4a60;
+}
+.contact-head h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    font-size: 3rem;
+}
+.contact-main{
+    width: 100%;
+    height: auto;
+    padding-bottom: 3rem;
+    
+}
+
+.contact-main .card{
+    width: 100%;
+    height: auto;
+    background-color: #f8f8ff;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border: none;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-top: -150px;
+    z-index: +1;
+    border-radius: 10px;
+}
+.contact-main .card label{
+    font-size: 1.3rem;
+    color: #1f4a60;
+}
+.contact-main .card input[type=text], input[type=email]{
+    width: 100%;
+    height: auto;
+    padding-left:.5rem;
+    border: 1px solid #1f4a60;
+    outline-color: #f8981d;
+    font-size: 15px;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    margin-bottom: 1rem;
+    
+}
+.contact-main .card textarea{
+    width: 100%;
+    height: 150px;
+    border: 1px solid #1f4a60;
+    outline-color: #f8981d;
+    padding-left:.5rem;
+}
+.contact-main .card button{
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+    text-transform: uppercase;
+    color: white;
+    background-color: #f8981d;
+    outline: none;
+    border: 2px solid #f8981d;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    font-size: 1.1rem;
+    transition: 0.5s;
+    margin-bottom: 1rem;
+}
+.contact-main .card button:hover{
+    background-color: transparent;
+    color: #1f4a60;
+    border: 2px solid #1f4a60;
+   
+}
+.contact-foot{
+    width: 100%;
+    height: auto;
+    padding-top: 1rem;
+    padding-bottom: 4rem;
+}
+.contact-foot h5{
+    color: #1f4a60;
+    font-weight: 500;
+}
+
+/* contact us page end*/
+
+/* about us page */
+.about-head{
+    width: 100%;
+    height: auto;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #f8f8ff;
+}
+.about-head h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: #1f4a60;
+    font-weight: 700;
+    font-size: 3rem;
+}
+.about-cont {
+  width: 100%;
+  height: auto;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+}
+.about-cont .card{
+  width: 100%;
+  border: none;
+}
+.about-cont img{
+  width: 100%;
+}
+.about-cont .right{
+  width: 100%;
+  background-color: #f8f8ff;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.about-cont .right p{
+  font-size: 1.2rem;
+  color: #333333;
+  text-align:center justify;
+}
+.about-cont2 {
+  width: 100%;
+  height: auto;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
+}
+.about-cont2 .card{
+  width: 100%;
+  border: none;
+}
+.about-cont2 img{
+  width: 30%;
+  margin-top: 1rem;
+}
+.about-cont2 .left{
+  width: 100%;
+  background-color: #f8f8ff;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.about-cont2 .left p{
+  font-size: 1.2rem;
+  color: #333333;
+  text-align:center justify;
+}
+/* about us page end*/
+
+/* blog page */
+.blog-main{
+    width: 100%;
+    height: auto;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #f8f8ff;
+    
+}
+.blog-main h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: #1f4a60;
+    font-weight: 700;
+    font-size: 3rem;
+}
+.blogs-all{
+    width: 100%;
+    height: auto;
+    padding-bottom: 3rem;
+    margin-top: 3rem;
+}
+.blogs-all .card{
+    width: 100%;
+    height: auto;
+    border: none;
+    outline: none;
+    border-radius: 0px;
+    background-color: #f8f8ff;
+    margin-bottom: 2rem;
+}
+.blogs-all .card img{
+    width: 100%;
+    height: auto;
+}
+.blogs-all .card h5{
+    color: #292929;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-left: 10px;
+}
+.blogs-all a{
+    text-decoration: none;
+    
+}
+.see-all-blog{
+    width: 100%;
+    height: auto;
+  
+    padding-bottom: 5rem;
+}
+.see-all-blog button{
+    color: #f8981d;
+    width: 10rem;
+    font-size: 1.3rem;
+    outline: none;
+    border: 2px solid #f8981d;
+    background-color: transparent;
+    padding-bottom: .5rem;
+    padding-top: .3rem;
+}
+.see-all-blog button:hover{
+    background-color: #1f4a60;
+    transition: 0.5s;
+}
+/* blog page end*/
+
+/* blog-post */
+.blog-post-main{
+    width: 100%;
+    height: auto;
+    padding-top: 3rem;
+}
+.blog-post-main .blog-nav{
+    width: 100%;
+    height: auto;
+    background-color: #f8f8ff ;
+    padding: .2rem 0 .2rem 2rem;
+}
+.blog-post-main .blog-nav p{
+    color:grey;
+}
+.blog-author{
+    width: 100%;
+    height: auto;
+}
+.blog-author .card img{
+ border:.09rem solid #f8981d;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  margin-right: .8rem;
+}
+.blog-author .flex {
+  display: flex;
+  flex-wrap: nowrap;
+
+  
+}
+.blog-author .card{
+    border: none;
+   
+}
+.blog-author .card h5{
+   color: #292929;
+   margin-top: 5px;
+}
+.blog-author .card p{
+    color: #292929;
+    margin-top: -5px;
+}
+.blog-conttt{
+    width: 100%;
+    height: auto;
+}
+.blog-conttt .side .card{
+    border: none;
+    background-color: #f8f8ff;
+    width: 100%;
+    height: auto;
+    margin-bottom: 2rem;
+}
+.blog-conttt .side .card h4{
+   color: #292929;
+   font-weight: 400;
+   padding-left: 10px;
+}
+.blog-conttt .side .card .style1 {
+
+border-top: 2px solid #f8981d;
+margin-top: 1px;
+width: 100%;
+margin-left: 0px;
+}
+.blog-conttt .side .card a {
+    color: #292929;
+    padding-left: 10px;
+    text-decoration: none;
+    font-size: 1.1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.blog-related{
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+.blog-related .style1 {
+
+border-top: 2px solid #f8981d;
+margin-top: 1px;
+width: 100%;
+margin-left: 0px;
+}
+.blog-related h4{
+   color: #292929;
+   font-weight: 600;
+   padding-left: 10px;
+}
+/* blog-post end*/
