--- a/application/assets/css/style_user_dashboard.css
+++ b/application/assets/css/style_user_dashboard.css
@@ -36,7 +36,7 @@
 }
 
 
-.db button{
+.db button select{
     outline: none;
     border: none;
     color: white;
@@ -60,7 +60,7 @@
   font-weight: lighter;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.feed button{
+.feed button select {
   outline: none;
   border: 1px solid gray;
   text-transform: uppercase;
@@ -90,7 +90,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.phpmy button{
+.phpmy button select{
   outline: none;
   border: 1px solid gray;
   text-transform: uppercase;
@@ -102,6 +102,6 @@
   width: 20rem;
 }  
 
-.phpmy button:hover{
+.phpmy button:hover select:hover{
   background-color: mediumturquoise;
 }
